# selfhosted-new

./: .gitlab-ci.yml  Jenkinsfile  README.md
.github/actions/rust-setup/: action.yml
.github/actions/sqlx/: action.yml
.github/workflows/: axum-api.yml  devOps.yml  package.yml  release.yml  svelte-ui.yml  ui.yml
api/: .gitignore  Cargo.toml
api/.devcontainer/: devcontainer.json
api/migrations/: 20241008010637_Table_AI_CHATS.sql  20241008040011_Table_AI_CHAT_MESSAGES.sql
api/src/: lib.rs
api/src/models/: mod.rs
api/src/routes/chat/: chat_history.rs  mod.rs  new_chat.rs
axum-api/: .gitlab-ci.yml
axum-api/.devcontainer/: Dockerfile  devcontainer.json
axum-api/src/: main.rs
axum-api/src/http/: mod.rs
axum-api/src/models/: cache.rs  chat.rs  llm.rs
axum-api/src/routes/: mod.rs
axum-api/src/utils/: db.rs  error.rs  telemetry.rs
backend/: Cargo.toml
backend/src/http/: layers.rs
backend/src/utils/: mod.rs
devOps/: Dockerfile  backend-ci.yml  nginx.conf  supervisord.conf
devops/: docker_entrypoint.sh
docker-context/: Dockerfile  supervisord.conf
frontend/: package.json
frontend/.devcontainer/: devcontainer.json
frontend/src/: typings.d.ts
frontend/src/lib/: global.css
sveltekit-ui/: .gitignore  package.json  svelte.config.js  tailwind.config.ts
sveltekit-ui/.devcontainer/: devcontainer.json
sveltekit-ui/.github/workflows/: main.yml
sveltekit-ui/src/: hooks.server.ts
sveltekit-ui/src/routes/: +page.server.ts
ui/: .gitlab-ci.yml  package.json  pnpm-lock.yaml  vite.config.ts
ui/src/routes/: +layout.svelte
(+49 files in other folders)
